# TryToMakeSmthng

./: .gitignore  .pre-commit-config.yaml  Playground.py  Readme.md  pyproject.toml  requirements-dev.txt  requirements.in
.github/workflows/: python-app.yml
MyML/Algorithms/LinearRegression/: LinearRegression.py
MyML/CalcGraph/: AbstractGraph.py  AbstractNode.py
MyML/DataPipelineTools/: DataLoader.py  IterableHelper.py
MyML/Helpers/NpExtensions/: AxisHelpers.py
MyML/Helpers/TestHelpers/: ConstantLoss.py  OptimizationTestFunc.py  SingleDirectionGradsStub.py
MyML/LinearRegression/: LinearRegression.py
MyML/Losses/: AbsoluteError.py  AbstractLoss.py  IdenticalLoss.py
MyML/Optimizers/: BatchGradientOptimizer.py  Optimizer.py  SGD.py
MyML/Tests/Algorithms/: test_LinearRegression.py
MyML/Tests/Optimizers/: test_BatchGradientOptimizer.py  test_SGD.py
MyML/Tests/Optimizers/Helpers/: ConstantLoss.py  SingleDirectionGradsStub.py
MyML/Tests/Optimizers/SGD/: SGD.py  test_SGD.py
